# tourney-dono

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfile  justfile
backend/: Cargo.toml
backend/src/: db.rs  discord.rs  main.rs  webserver.rs  websocket.rs
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/assets/: main.css
frontend/composables/: useDonations.ts
frontend/models/: donation.ts  message.ts
frontend/pages/: index.vue  latest.vue
frontend/utils/: beforeLeave.ts
migrations/: 20231008150927_initial.down.sql  20231008150927_initial.up.sql
src/: db.rs  discord.rs  lib.rs  main.rs  templates.rs  webserver.rs  websocket.rs
templates/: celebration.html  donations.html  donations.j2
